--- a/package.json
+++ b/package.json
@@ -1,16 +1,36 @@
 {
-  "name": "srrx",
-  "module": "src/index.ts",
-  "type": "module",
-  "devDependencies": {
-    "@biomejs/biome": "2.3.9",
-    "@types/bun": "latest"
-  },
-  "peerDependencies": {
-    "typescript": "^5"
-  },
-  "dependencies": {
-    "@microsoft/signalr": "^10.0.0",
-    "rxjs": "^7.8.2"
-  }
+	"name": "srrx",
+	"version": "2.0.0",
+	"description": "Reactive Microsoft SignalR client wrapper using RxJS and Bun.",
+	"type": "module",
+	"main": "./dist/index.js",
+	"module": "./dist/index.js",
+	"types": "./dist/index.d.ts",
+	"files": [
+		"dist"
+	],
+	"exports": {
+		".": {
+			"types": "./dist/index.d.ts",
+			"import": "./dist/index.js"
+		}
+	},
+	"scripts": {
+		"dev": "bun run src/index.ts",
+		"build": "bun run build.ts",
+		"prepublishOnly": "bun run build"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "2.3.9",
+		"@types/bun": "latest"
+	},
+	"peerDependencies": {
+		"typescript": "^5.9.3",
+		"@microsoft/signalr": "^10.0.0",
+		"rxjs": "^7.8.2"
+	},
+	"dependencies": {
+		"@microsoft/signalr": "^10.0.0",
+		"rxjs": "^7.8.2"
+	}
 }
